# vizro

./: .gitignore  CAUSAL_ANALYSIS_GUIDE.md  CYCLE_DETECTION_FIX.md  DASHBOARD_VERSIONS_STATUS.md  DATASET_IMPROVEMENTS.md  ENHANCED_LAG_ANALYSIS.md  FINAL_PROJECT_STATUS.md  FORECASTING_INDEX_FIX.md  FORECASTING_MODELS_GUIDE.md  INCIDENT_ENHANCEMENTS.md  INSTALLATION_GUIDE.md  INTERNATIONAL_DATE_COLUMN_FIX.md  LAG_ANALYSIS_EXTRACTION_PLAN.md  LAG_ANALYSIS_FEATURE.md  NAN_INFINITY_HANDLING_FIX.md  NOTE.md  ORIGINAL_DASHBOARD_DISCRETIZATION_FIX.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  README_DISCRETIZATION_UPDATE.md  SCRATCHPAD.md  SESSION.md  SHOW_ALL_NODES_ENHANCEMENT.md  SLIDING_WINDOW_IMPLEMENTATION.md  Vizro Analytics.spec  aed_sales_data.csv  aed_sales_data_enhanced.csv  architecture-review.md  causal_analysis_summary_report.md  coverage.xml  dashboard.py  dashboard_settings.json  gradio_dashboard.py  mac-native-ui-migration-plan.md  main.py  pyproject.toml  requirements-optional.txt  requirements.txt  run_dashboard.py  (+3 more)
.gemini/: GEMINI.md
.superdesign/design_iterations/: modern_dashboard_1.html  modern_dashboard_theme.css
assets/: modern_dashboard.css  style.css  test.js
config/: __init__.py  dashboard_settings.json
docs/: DEEP_DIVE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  TECHNICAL_DETAILS.md  __init__.py
docs/api/: API_REFERENCE.md
docs/technical/: ADVANCED_CAUSAL_FEATURES_SUMMARY.md  ARCHITECTURE.md  CAUSAL_ANALYSIS_GUIDE.md  CAUSAL_ANALYSIS_RETURN_FIX.md  DASHBOARD_COMPLETE_SUMMARY.md  DATA_MANIPULATION_SUMMARY.md  DATE_VISUALIZATION_FIX.md  DEPENDENCY_UPDATE_SUMMARY.md  DISCRETIZATION_COMPLETE_FIX.md  DISCRETIZATION_FIX_SUMMARY.md  ENHANCED_SALES_DATASET_SUMMARY.md  FORECASTING_ERROR_FIX.md  FORECASTING_IMPLEMENTATION_SUMMARY.md  FORECASTING_TIMESTAMP_FIX.md  FORECAST_PLOT_FIX.md  INTERVENTION_ANALYSIS_ENHANCED_FIX.md  INTERVENTION_ANALYSIS_FIX.md  REFACTORING_SUMMARY.md  RESTRUCTURING_SUMMARY.md  SAMPLE_DATA_DEMO_GUIDE.md  SHOW_ALL_RELATIONSHIPS_FIX.md  UV_MIGRATION_SUMMARY.md  VIZRO_INTEGRATION_SUMMARY.md
docs/user-guide/: GETTING_STARTED.md
src/: __init__.py
src/api/: routes.py
src/core/: __init__.py  config.py  dashboard_config.py  data_handler.py
src/engines/: __init__.py  causal_analysis.py  causal_discretization.py  causal_engine.py  causal_intervention.py  causal_network_utils.py  forecasting_engine.py  lag_analysis_engine.py  visualization_engine.py
src/ui/: __init__.py  dashboard.py  settings_manager.py
src/ui/components/: analysis_tab.py  config_tab.py  visualization_tab.py
src/ui/frontend/: causal_analysis.html  data_source.html  forecasting.html  visualizations.html
src/utils/: __init__.py  data_generator.py  data_utils.py
tests/: __init__.py  conftest.py  verify_time_range_v2.py
tests/integration/: test_visualization_flow.py
tests/unit/: test_axis_reactivity.py  test_forecasting_engine.py  test_localized_causal.py  test_routes_visualize.py  test_visualization_engine.py
