[project]
name = "dynamic-data-analysis-dashboard"
version = "1.0.0"
description = "Advanced Causal Discovery & Statistical Analysis Dashboard with Vizro-Enhanced Visualizations"
authors = [
    {name = "Data Analysis Team"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["causal-analysis", "data-science", "dashboard", "gradio", "statistics", "vizro", "forecasting", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "gradio>=4.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "causalnex>=0.12.0",
    "networkx>=2.6.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
    "vizro>=0.1.25",
    "statsmodels>=0.13.0",
    "pmdarima>=2.0.0",
    "patsy>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]

[project.scripts]
dashboard = "gradio_dashboard:main"

[project.urls]
Homepage = "https://github.com/your-org/dynamic-data-analysis-dashboard"
Repository = "https://github.com/your-org/dynamic-data-analysis-dashboard"
Documentation = "https://github.com/your-org/dynamic-data-analysis-dashboard#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
