[project]
name = "advanced-analytics-dashboard"
version = "1.0.0"
description = "Advanced Analytics Dashboard with Causal Analysis and Forecasting"
authors = [
    {name = "Analytics Team", email = "analytics@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "gradio>=4.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0",
    "causalnex>=0.12.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "networkx>=2.8.0",
    "scipy>=1.9.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/advanced-analytics-dashboard"
Documentation = "https://github.com/your-org/advanced-analytics-dashboard/docs"
Repository = "https://github.com/your-org/advanced-analytics-dashboard.git"
Issues = "https://github.com/your-org/advanced-analytics-dashboard/issues"

[project.scripts]
analytics-dashboard = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "causalnex.*",
    "networkx.*",
    "plotly.*",
    "gradio.*"
]
ignore_missing_imports = true